--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="text">
                     I am Munabbir Shakib and I'm a <span class="typing-2"></span>
                 </div>
-                <p>I am Munabbir Shakib work from Bangladesh. I will work as a front end developer with more than 3 years of experience in Web Technology. I am proficient in JavaScript frameworks like React and Next as well as backend frameworks like Node.</p>
+                <p><span class="My-about-text"></span></p>
                 <a href="https://www.facebook.com/profile.php?id=100081812799819" class="btn">Download CV</a>
             </div>
         </div>
